library/src/libqtextobject.h

typedef QMetaObject::Connection QMetaObject__Connection;
typedef struct QMetaObject QMetaObject;
typedef struct QMetaObject__Connection QMetaObject__Connection;
typedef struct QTextBlockGroup QTextBlockGroup;
typedef struct QTextDocument QTextDocument;
typedef struct QTextFormat QTextFormat;
typedef struct QTextObject QTextObject;
QMetaObject* QTextObject_MetaObject(const QTextObject* self);
void* QTextObject_Metacast(QTextObject* self, const char* param1);
int QTextObject_Metacall(QTextObject* self, int param1, int param2, void** param3);
libqt_string QTextObject_Tr(const char* s);
QTextFormat* QTextObject_Format(const QTextObject* self);
int QTextObject_FormatIndex(const QTextObject* self);
QTextDocument* QTextObject_Document(const QTextObject* self);
int QTextObject_ObjectIndex(const QTextObject* self);
libqt_string QTextObject_Tr2(const char* s, const char* c);
libqt_string QTextObject_Tr3(const char* s, const char* c, int n);
QMetaObject* QTextBlockGroup_MetaObject(const QTextBlockGroup* self);
void* QTextBlockGroup_Metacast(QTextBlockGroup* self, const char* param1);
int QTextBlockGroup_Metacall(QTextBlockGroup* self, int param1, int param2, void** param3);
libqt_string QTextBlockGroup_Tr(const char* s);
libqt_string QTextBlockGroup_Tr2(const char* s, const char* c);
libqt_string QTextBlockGroup_Tr3(const char* s, const char* c, int n);